unpackaged/objects/Course__c.object
<CustomObject>
    <fields>
        <fullName>Course__c</fullName>
        <label>Course</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dates_of_Study_End__c</fullName>
        <label>Dates of Study (End)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Dates_of_Study_Start__c</fullName>
        <label>Dates of Study (Start)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Grade_Received__c</fullName>
        <label>Grade Received</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Institution__c</fullName>
        <label>Institution</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Scholarships__c</fullName>
        <label>Scholarships</label>
        <referenceTo>Scholarships__c</referenceTo>
        <relationshipLabel>Courses</relationshipLabel>
        <relationshipName>Courses</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Course</label>
    <nameField>
        <displayFormat>CN-{00000000}</displayFormat>
        <label>Course Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Courses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>